// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render TabGroup list correctly 1`] = `
<div
  className="main"
  id="tab-group"
>
  <div
    className="row"
  >
    <div
      className="btn-group btn-center"
    >
      <button
        className="button"
        id="clickableSortArrow"
        onClick={[Function]}
      >
        <i
          className="fas fa-sort"
        />
      </button>
      <button
        className="button"
        id="openAllTabs"
        onClick={[Function]}
      >
        Open all
      </button>
      <button
        className="button"
        id="openAllTabs"
        onClick={[Function]}
      >
        Delete all
      </button>
    </div>
    <div
      className="clear"
    >
      <ul
        className="ul-no-bullet tab-group"
      >
        <li
          key="1"
        >
          <button
            className="btn-tab delete-icon"
            id={1}
            name="My Favorite React Tutorial"
            onClick={[Function]}
          >
            <i
              aria-hidden="true"
              className="fa fa-times"
            />
          </button>
          <Link
            className="link"
            replace={false}
            to="https://www.somedomain.com"
          >
            My Favorite React Tutorial
          </Link>
        </li>
        <li
          key="2"
        >
          <button
            className="btn-tab delete-icon"
            id={2}
            name="My Second Favorite React Tutorial"
            onClick={[Function]}
          >
            <i
              aria-hidden="true"
              className="fa fa-times"
            />
          </button>
          <Link
            className="link"
            replace={false}
            to="https://www.somedomain2.com"
          >
            My Second Favorite React Tutorial
          </Link>
        </li>
        <li
          key="3"
        >
          <button
            className="btn-tab delete-icon"
            id={3}
            name="The Best React Tutorial Ever"
            onClick={[Function]}
          >
            <i
              aria-hidden="true"
              className="fa fa-times"
            />
          </button>
          <Link
            className="link"
            replace={false}
            to="https://www.somedomain2.com"
          >
            The Best React Tutorial Ever
          </Link>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`should render TabGroup list with empty message 1`] = `
<div
  className="main"
  id="tab-group"
>
  <div
    className="row"
  >
    <div
      className="btn-group btn-center"
    >
      <button
        className="button"
        id="clickableSortArrow"
        onClick={[Function]}
      >
        <i
          className="fas fa-sort"
        />
      </button>
      <button
        className="button"
        id="openAllTabs"
        onClick={[Function]}
      >
        Open all
      </button>
      <button
        className="button"
        id="openAllTabs"
        onClick={[Function]}
      >
        Delete all
      </button>
    </div>
    <div
      className="clear"
    >
      <p>
        You haven't added any pages to 
        hello
         yet.
      </p>
    </div>
  </div>
</div>
`;
